--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dark-mode-theme</title>
+  <title>Dark Mode Theme</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="./css/styles.css">
+  <script src="./js/script.js" defer></script>
 </head>
 <body>
-  
+  <header>
+    <h2>Light and Dark</h2>
+    <div>
+      <input type="checkbox" name="change-theme" id="change-theme" />
+      <label for="change-theme">
+        <i class="bi bi-sun"></i>
+        <i class="bi bi-moon"></i>
+      </label>
+    </div>
+  </header>
+  <main>
+    <div class="card">
+      <div class="card-image">
+        <span>Nike</span>
+        <img src="img/tenis2.png" alt="Tênis Nike preto">
+      </div>
+      <div class="card-details">
+        <h2>Tênis Nike</h2>
+        <p class="subtitle">Excelente para Running</p>
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi commodi quam labore fugiat nemo atque, corrupti provident velit soluta suscipit reprehenderit vero natus cum unde ipsum rem beatae rerum vitae!
+        </p>
+        <div class="price-container">
+          <span class="price">R$399,99</span>
+          <button class="btn">Comprar</button>
+        </div>
+      </div>
+    </div>
+  </main>
+    
 </body>
 </html>
